simplified schema, voting anchor bug fixed

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "envFile": "${workspaceFolder}/.env"
+            // "args": ["20251229"]
         }
     ]
 }
